--- a/css/app.css
+++ b/css/app.css
@@ -18,6 +18,28 @@ a, .btn-link {
     border-color: #1861ac;
 }
 
+.iconoL {
+    width: 12%;
+    height: auto;
+    padding: 1%;
+    box-sizing: border-box;
+    transition: transform 0.7s;
+}
+    .iconoL:hover {
+        transform: scale(1.2);
+    }
+
+.iconoG {
+    width: 15%;
+    height: auto;
+    padding-left: 30px;
+    box-sizing: border-box;
+    transition: transform 0.7s;
+}
+    .iconoG:hover {
+        transform: scale(1.2);
+    }
+
 .content {
     padding-top: 1.1rem;
 }
@@ -133,6 +155,10 @@ h3 {
 
 table {
     width: 100%;
+}
+
+.tituloIzquierdo {
+    text-align:center;
 }
 
 .tabladisenio {
@@ -356,5 +382,13 @@ td {
 
     .fondo-body {
         background: linear-gradient(to right, #009999 0%, #fbfbfb 5%);
+    }
+
+    .iconoG {
+        width:10%;
+        padding:0%;
+    }
+    .iconoL {
+        width:7%;padding:0%;
     }
 }
